# Django_public_server

M_01_LinuxIntro/mysite/mysite/: settings.py
M_02_DjangoIntro/mysite/: db.sqlite3
M_02_DjangoIntro/mysite/mysite/: settings.py
M_02_DjangoIntro/mysite/shopapp/: urls.py  views.py
M_03_DatabaseAndModels/mysite/: db.sqlite3
M_03_DatabaseAndModels/mysite/shopapp/: models.py
M_04_DjangoAdmin/mysite/: db.sqlite3
M_04_DjangoAdmin/mysite/mysite/: settings.py
M_04_DjangoAdmin/mysite/shopapp/: admin.py  models.py  urls.py  views.py
M_05_RequestsAndMiddlewares/mysite/mysite/: settings.py  urls.py
M_05_RequestsAndMiddlewares/mysite/requestsapp/: middlewares.py  urls.py  views.py
M_06_Forms/mysite/: db.sqlite3
M_06_Forms/mysite/shopapp/: forms.py  urls.py  views.py
M_07_CBV/mysite/: db.sqlite3
M_07_CBV/mysite/shopapp/: urls.py  views.py
M_08_Auth/mysite/: db.sqlite3
M_09_permissions/mysite/: db.sqlite3
M_10_Testing/mysite/: db.sqlite3
M_11_Files/: requirements.txt
M_11_Files/mysite/: db.sqlite3
M_12_i18n_l10n/mysite/: db.sqlite3
M_13_DRF/mysite/: db.sqlite3
M_14_Docs/: requirements.txt
M_14_Docs/mysite/: db.sqlite3
M_15_queries/mysite/: db.sqlite3
M_16_logging/: Dockerfile  docker-compose.yaml  requirements.txt
M_16_logging/mysite/: db.sqlite3
M_17_import_export/mysite/: db.sqlite3  shopapp-fixtures.json
M_18_Django_Cache/mysite/: db.sqlite3
M_19_prod/: Dockerfile  pyproject.toml
M_19_prod/mysite/database/: db.sqlite3
M_19_prod/mysite/mysite/: settings.py
M_19_prod/mysite/shopapp/: forms.py
(+117 files in other folders)
